--- a/assets/scss/base/main.scss
+++ b/assets/scss/base/main.scss
@@ -22,9 +22,7 @@
   &--top    { top:    0;     }
   &--bottom { bottom: 0;     }
 
-  a {
-    border: none;
-  }
+  a { border: none; }
 }
 
 
