--- a/assets/scss/modules/drop.scss
+++ b/assets/scss/modules/drop.scss
@@ -8,18 +8,21 @@
 
 .panelBar-mDrop {
   position:     absolute;
-  left:         50%;
 
   max-height:   calc(100vh - 80px);
-  transform:    translateX(-50%);
 
   background:   $color-white;
   box-shadow:   rgba($color-black, .2) 0 2px 10px;
   visibility:   hidden;
   overflow-y:   auto;
 
-  .panelBar--top    & { top: 100%;    }
-  .panelBar--bottom & { bottom: 100%; }
+  &:not(.panelBar-element--overlap) {
+    left:      50%;
+    transform: translateX(-50%);
+
+    .panelBar--top    & { top: 100%;    }
+    .panelBar--bottom & { bottom: 100%; }
+  }
 
   @media (max-width: 550px) { @include dropFullwidth; }
 }
